# open-roles

./: .gitignore  README.md
blockchain_ethereum/: ADMIN.md  BUILDER.md  README.md
blockchain_ethereum/solidity/contracts/: DelegateAdmin.sol  IRoleManagerAdmin.sol
blockchain_ethereum/solidity/v2/: README.md  package.json
blockchain_ethereum/solidity/v2/contracts/core/: IOpenRolesManagedExtended.sol  OpenRoles.sol  OpenRolesAdmin.sol  OpenRolesDerivativeAdmin.sol  OpenRolesDerivativeTypesAdmin.sol  OpenRolesSecure.sol  OpenRolesSecureCore.sol  (+1 more)
blockchain_ethereum/solidity/v2/deploy/: deployOpenRolesCore.ts  estimateDeployGas.ts  utils.ts
blockchain_ethereum/ui/: README.md  derivative_contracts_admin.html  derivative_types_admin.html  index.html
blockchain_ethereum/ui/assets/js/: openRolesAdminAbi.js
blockchain_near/: ADMIN.md  BUILDER.md  README.md
blockchain_near/rust/obei_or_near_core/: Cargo.toml
blockchain_near/rust/obei_or_near_core/src/: lib.rs  participant_lists.rs  smart_contracts.rs
blockchain_near/rust/open-block-ei-open-roles-near-core/: Cargo.toml  README.md
blockchain_near/rust/open-block-ei-open-roles-near-core/src/: lib.rs
blockchain_near/rust/open-block-ei-open-roles-near-core/src/or_traits/: mod.rs
blockchain_near/rust/open-block-ei-open-roles-near-core/src/tests/: mod.rs
blockchain_near/rust/open-block-ei-open-roles-near-test/: Cargo.toml
blockchain_near/rust/open-block-ei-open-roles-near-test/src/: lib.rs
business/: README.md
solidity/contracts/: IDelegateAdmin.sol  IRoleManager.sol  IRoleManagerAdmin.sol  RoleManager.sol
(+12 files in other folders)
