[package]
name = "open-block-ei-open-roles-near-core"
version = "0.1.0"
authors = ["Block Star Logic"]
edition = "2018"
description = "Decentralized role management for smart contracts on the NEAR Blockchain"
readme = "README.md"
homepage = "https://www.blockstarlogic.com/obei"
repository = "https://github.com/Block-Star-Logic/open-roles"
license = "Apache 2.0"
keywords = ["web3", "enterprise", "role management", "NEAR", "blockchain", "smart contract"]
categories = ["blockchain-enterprise-components", "command-line-utilities", "smart-contract-plugin"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
serde = "1.0.57"
chrono = "0.4.19"


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true